Spring Java config OK

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,5 @@
 qcm.create.title=Create a new QCM
+qcm.create.success=QCM successfully created
+qcm.create.error=Error while saving QCM
+
+signup=Signup
