Formulaire de création d'un QCM

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,2 +1,4 @@
 qcm.create.title=Créer un nouveau QCM
 signup=Signup
+qcm.create.success=Formulaire créé avec succès
+qcm.create.error=Une erreur s'est produite
