Added answers view + questions views + QuestionRepository

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,3 +3,4 @@ qcm.create.success=QCM successfully created
 qcm.create.error=Error while saving QCM
 
 signup=Signup
+answer.list.title=Answers list
