mise en propre du formulaire de création d'un QCM

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,4 +1,4 @@
-qcm.create.title=Créer un nouveau QCM
+qcm.create.title=Cr&eacute;er un nouveau QCM
 signup=Signup
 qcm.create.success=Formulaire créé avec succès
 qcm.create.error=Une erreur s'est produite
