[Qcm]View begin

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,4 +3,6 @@ qcm.create.success=QCM successfully created
 qcm.create.error=Error while saving QCM
 
 signup=Signup
+qcm.view.title=Answer the QCM
+qcm.view.question=Questionsignup=Signup
 answer.list.title=Answers list
