--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,5 +1,7 @@
 qcm.create.title=Cr&eacute;er un nouveau QCM
 signup=Signup
+qcm.view.title=Répondre au QCM
+qcm.view.question=Question
 qcm.create.success=Formulaire créé avec succès
 qcm.create.error=Une erreur s'est produite
 answer.list.title=Answers list
