--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,4 +5,10 @@ qcm.create.error=Error while saving QCM
 signup=Signup
 qcm.view.title=Answer the QCM
 qcm.view.question=Questionsignup=Signup
-answer.list.title=Answers list
+answer.list.title=Answers listanswer.list.title=Answers list
+
+qcm.name=Qcm name
+qcm.questions.number=Number of questions
+no.qcm.found=No qcm found
+qcm.list=Qcm list
+qcm.create=Create QCM
