--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,7 +1,12 @@
-qcm.create.title=Cr&eacute;er un nouveau QCM
+qcm.create.title=Create a new QCM
+qcm.create.success=QCM successfully created
+qcm.create.error=Error while saving QCM
+
 signup=Signup
-qcm.view.title=Répondre au QCM
-qcm.view.question=Question
-qcm.create.success=Formulaire créé avec succès
-qcm.create.error=Une erreur s'est produite
 answer.list.title=Answers list
+
+qcm.name=Qcm name
+qcm.questions.number=Number of questions
+no.qcm.found=No qcm found
+qcm.list=Qcm list
+qcm.create=Create QCM
