Added EvaluationService + EvaluationController

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -10,3 +10,9 @@ qcm.questions.number=Number of questions
 no.qcm.found=No qcm found
 qcm.list=Qcm list
 qcm.create=Create QCM
+evaluation.create.title=Create evaluation
+evaluation.name=Evaluation name
+evaluations.number=Number of available evaluations
+no.evaluation.found=No evaluation available
+evaluations.available=Available evaluations
+evaluation.selected.qcm=Selected qcm
