--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,7 +4,7 @@ qcm.create.error=Error while saving QCM
 
 signup=Signup
 qcm.view.title=Answer the QCM
-qcm.view.question=Questionsignup=Signup
+qcm.view.question=question
 answer.list.title=Answers listanswer.list.title=Answers list
 
 qcm.name=Qcm name
@@ -18,3 +18,5 @@ evaluations.number=Number of available evaluations
 no.evaluation.found=No evaluation available
 evaluations.available=Available evaluations
 evaluation.selected.qcm=Selected qcm
+user.add.title=Add user
+user.add.success=User added successfully
