--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -16,3 +16,7 @@ evaluations.number=Number of available evaluations
 no.evaluation.found=No evaluation available
 evaluations.available=Available evaluations
 evaluation.selected.qcm=Selected qcm
+user.add.title=Add user
+user.add.success=User added successfully
+qcm.view.title=Answer the QCM
+qcm.view.question=question
