Added toggle-switch to users view + improvements

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -20,3 +20,6 @@ evaluations.available=Available evaluations
 evaluation.selected.qcm=Selected qcm
 user.add.title=Add user
 user.add.success=User added successfully
+users.search=Search user by name
+user.type.teacher=Teacher
+user.type.student=Student
