--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -20,3 +20,6 @@ user.add.title=Add user
 user.add.success=User added successfully
 qcm.view.title=Answer the QCM
 qcm.view.question=question
+users.search=Search user by name
+user.type.teacher=Professeur
+user.type.student=Etudiant
