--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -23,3 +23,6 @@ qcm.view.question=question
 users.search=Search user by name
 user.type.teacher=Professeur
 user.type.student=Etudiant
+question.create.title=Ajouter une nouvelle question
+question.not.found=Question introuvable
+question.create.success=Nouvelle question ajoutée
