--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -29,3 +29,5 @@ question.create.success=Nouvelle question ajoutéeqcm.view.question=question
 qcm.view.validate=Valider
 qcm.view.reset=Réinitialiser
 qcm.view.validate.error=Une erreur est survenue lors de la validation du QCM
+evaluation.selected.grade=Grade
+evaluation.selected.course=Course
