Updated EvaluationController + Added RoleService (cached)

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -31,3 +31,4 @@ qcm.view.reset=Reset
 qcm.view.validate.error=Error while validating the QCM
 evaluation.selected.grade=Grade
 evaluation.selected.course=Course
+users.filter=Filter by name
