--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -31,3 +31,4 @@ qcm.view.reset=Réinitialiser
 qcm.view.validate.error=Une erreur est survenue lors de la validation du QCM
 evaluation.selected.grade=Grade
 evaluation.selected.course=Course
+users.filter=Filter by name
