--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -32,3 +32,14 @@ qcm.view.validate.error=Error while validating the QCM
 evaluation.selected.grade=Grade
 evaluation.selected.course=Course
 users.filter=Filter by name
+qcm.validate.success=Qcm validated \! Your mark \: {0}
+course.create.title=Add course
+courses.list=Courses list
+course.name=Course name
+no.course.found=No course found
+course.create.success=Course successfully created \!
+evaluation.startDate=Start date
+evaluation.endDate=Create Property
+evaluation.take=Take evaluation
+course=Course
+action=Action
