--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -43,3 +43,5 @@ evaluation.endDate=Create Property
 evaluation.take=Take evaluation
 course=Course
 action=Action
+answer.create.error=Error while adding answer
+answer.create.success=Answer created with success \!
