finitions du form de création d'utilisateur + home

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -23,6 +23,7 @@ user.add.success=User added successfully
 users.search=Search user by name
 user.type.teacher=Teacher
 user.type.student=Student
+user.create.title=Create a new user
 question.create.title=Add new question
 question.not.found=Question not found
 question.create.success=New question addeduser.add.success=User added successfully
