--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -25,7 +25,7 @@ user.type.teacher=Professeur
 user.type.student=Etudiant
 question.create.title=Ajouter une nouvelle question
 question.not.found=Question introuvable
-question.create.success=Nouvelle question ajoutéeqcm.view.question=question
+question.create.success=Nouvelle question ajoutéeqcm.view.question\=question
 qcm.view.validate=Valider
 qcm.view.reset=Réinitialiser
 qcm.view.validate.error=Une erreur est survenue lors de la validation du QCM
@@ -44,4 +44,5 @@ evaluation.take=Take evaluation
 course=Course
 action=Action
 answer.create.error=Error while adding answer
-answer.create.success=Answer created with success \!
+answer.create.success=Réponse correcte\!
+user.create.title=Créer un nouvel utilisateur
