Create Question Create answer (pas fini)

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,7 +5,7 @@ qcm.create.error=Error while saving QCM
 signup=Signup
 qcm.view.title=Answer the QCM
 qcm.view.question=question
-answer.list.title=Answers listanswer.list.title=Answers list
+answer.list.title=Answers list
 
 qcm.name=Qcm name
 qcm.questions.number=Number of questions
@@ -28,7 +28,10 @@ question.not.found=Question not found
 question.create.success=New question addeduser.add.success=User added successfully
 qcm.view.validate=Validate
 qcm.view.reset=Reset
-qcm.view.validate.error=Error while validating the QCM
+qcm.view.validate.error=Error while validating the QCMuser.add.success=User added successfully
+qcm.view.validate=Validate
+qcm.view.reset=Reset
+qcm.view.validate.error=Error while validating the QCMqcm.view.validate.error=Error while validating the QCM
 evaluation.selected.grade=Grade
 evaluation.selected.course=Course
 users.filter=Filter by name
@@ -45,3 +48,10 @@ course=Course
 action=Action
 answer.create.error=Error while adding answer
 answer.create.success=Answer created with success \!
+question.create.label=Label of your question \:
+question.create.points=Points \:
+question.create.validate=Validate
+question.label=Label
+question.points=Points
+question.edit=Edit
+answer.create=Add an answer
