--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -3,7 +3,7 @@ qcm.create.success=QCM successfully created
 qcm.create.error=Error while saving QCM
 
 signup=Signup
-answer.list.title=Answers list
+answer.list.title=Liste des réponses
 
 qcm.name=Qcm name
 qcm.questions.number=Number of questions
@@ -25,10 +25,13 @@ user.type.teacher=Professeur
 user.type.student=Etudiant
 question.create.title=Ajouter une nouvelle question
 question.not.found=Question introuvable
-question.create.success=Nouvelle question ajoutéeqcm.view.question=question
+question.create.success=Nouvelle question ajoutéeqcm.view.question\=question
 qcm.view.validate=Valider
 qcm.view.reset=Réinitialiser
-qcm.view.validate.error=Une erreur est survenue lors de la validation du QCM
+qcm.view.validate.error=Une erreur est survenue lors de la validation du QCMqcm.view.question\=question
+qcm.view.validate=Valider
+qcm.view.reset=Réinitialiser
+qcm.view.validate.error=Une erreur est survenue lors de la validation du QCMqcm.view.validate.error=Une erreur est survenue lors de la validation du QCM
 evaluation.selected.grade=Grade
 evaluation.selected.course=Course
 users.filter=Filter by name
@@ -45,3 +48,10 @@ course=Course
 action=Action
 answer.create.error=Error while adding answer
 answer.create.success=Answer created with success \!
+question.create.label=Intitulé de votre question \:
+question.create.points=Points \:
+question.create.validate=Valider
+question.label=Intitulé
+question.points=Points
+question.edit=Éditer
+answer.create=Ajouter une réponse
