--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -61,3 +61,5 @@ evaluation.create.success=Evaluation created successfully
 evaluation.delete.success=Evaluation deleted successfully
 course.delete=Delete course
 course.delete.success=Courses successfully deleted
+evaluation.not-found=Evaluation not found
+error=An error has occured. Please retry.
