--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -61,3 +61,5 @@ evaluation.delete.success=Evaluation deleted successfully
 course.delete=Delete course
 course.delete.success=Courses successfully deletedanswer.create.success=Réponse correcte\!
 user.create.title=Créer un nouvel utilisateur
+evaluation.not-found=Evaluation not found
+error=An error has occured. Please retry.
