Added many functionalities related to eval + users

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -63,3 +63,5 @@ course.delete=Delete course
 course.delete.success=Courses successfully deleted
 evaluation.not-found=Evaluation not found
 error=An error has occured. Please retry.
+evaluation.result=Mark
+student.not-found=Student not found
