--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -63,3 +63,5 @@ course.delete.success=Courses successfully deletedanswer.create.success=Réponse 
 user.create.title=Créer un nouvel utilisateur
 evaluation.not-found=Evaluation not found
 error=An error has occured. Please retry.
+evaluation.result=Mark
+student.not-found=Student not found
