--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -65,3 +65,4 @@ evaluation.not-found=Evaluation not found
 error=An error has occured. Please retry.
 evaluation.result=Mark
 student.not-found=Student not found
+student.average=Student average
