Added test data (data-sql) + QcmService.getByTeacher() + SecurityTests OK

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -66,3 +66,4 @@ error=An error has occured. Please retry.
 evaluation.result=Mark
 student.not-found=Student not found
 student.average=Student average
+evaluation.already.taken=You have already taken this evaluation
