--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -67,3 +67,4 @@ evaluation.result=Mark
 student.not-found=Student not found
 student.average=Student average
 evaluation.already.taken=You have already taken this evaluation
+evaluation.delete.error.already-taken=Cannot delete evaluation has students have already taken this evaluation
