Fix createQCM + courses list + create/delete evaluation

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -27,12 +27,6 @@ user.create.title=Create a new user
 question.create.title=Add new question
 question.not.found=Question not found
 question.create.success=New question addeduser.add.success=User added successfully
-qcm.view.validate=Validate
-qcm.view.reset=Reset
-qcm.view.validate.error=Error while validating the QCMuser.add.success=User added successfully
-qcm.view.validate=Validate
-qcm.view.reset=Reset
-qcm.view.validate.error=Error while validating the QCMqcm.view.validate.error=Error while validating the QCM
 evaluation.selected.grade=Grade
 evaluation.selected.course=Course
 users.filter=Filter by name
@@ -55,7 +49,7 @@ question.create.validate=Validate
 question.label=Label
 question.points=Points
 question.edit=Edit
-answer.create=Add an answeranswer.create.success=Answer created with success \!
+answer.create=Add an answer
 evaluation.delete=Delete
 evaluation.create.success=Evaluation created successfully
 evaluation.delete.success=Evaluation deleted successfully
@@ -68,3 +62,11 @@ student.not-found=Student not found
 student.average=Student average
 evaluation.already.taken=You have already taken this evaluation
 evaluation.delete.error.already-taken=Cannot delete evaluation has students have already taken this evaluation
+qcm.rate=Rate
+qcm.content=Content
+answer.add=Add an answer
+course.delete.error.evaluation=Cannot delete course {0} as an evaluation has been associated with it
+evaluations.by-grade=Evaluations by grade
+student.info=Profile
+student.marks=My marks
+users.list=Users list
