--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -3,7 +3,7 @@ qcm.create.success=QCM successfully created
 qcm.create.error=Error while saving QCM
 
 signup=Signup
-answer.list.title=Liste des réponses
+answer.list.title=Liste des r\u00E9ponses
 
 qcm.name=Qcm name
 qcm.questions.number=Number of questions
@@ -25,13 +25,10 @@ user.type.teacher=Professeur
 user.type.student=Etudiant
 question.create.title=Ajouter une nouvelle question
 question.not.found=Question introuvable
-question.create.success=Nouvelle question ajoutéeqcm.view.question\=question
+question.create.success=Nouvelle question ajout\u00E9e
 qcm.view.validate=Valider
-qcm.view.reset=Réinitialiser
-qcm.view.validate.error=Une erreur est survenue lors de la validation du QCMqcm.view.question\=question
-qcm.view.validate=Valider
-qcm.view.reset=Réinitialiser
-qcm.view.validate.error=Une erreur est survenue lors de la validation du QCMqcm.view.validate.error=Une erreur est survenue lors de la validation du QCM
+qcm.view.reset=R\u00E9initialiser
+qcm.view.validate.error=Une erreur est survenue lors de la validation du QCM
 evaluation.selected.grade=Grade
 evaluation.selected.course=Course
 users.filter=Filter by name
@@ -48,19 +45,19 @@ course=Course
 action=Action
 answer.create.error=Error while adding answer
 answer.create.success=Answer created with success \!
-question.create.label=Intitulé de votre question \:
+question.create.label=Intitul\u00E9 de votre question \:
 question.create.points=Points \:
 question.create.validate=Valider
-question.label=Intitulé
+question.label=Intitul\u00E9
 question.points=Points
-question.edit=Éditer
-answer.create=Ajouter une réponseanswer.create.success=Answer created with success \!
+question.edit=\u00E9diter
+answer.create=Ajouter une r\u00E9pons
 evaluation.delete=Delete
 evaluation.create.success=Evaluation created successfully
 evaluation.delete.success=Evaluation deleted successfully
 course.delete=Delete course
-course.delete.success=Courses successfully deletedanswer.create.success=Réponse correcte\!
-user.create.title=Créer un nouvel utilisateur
+course.delete.success=Courses successfully deletedanswer.create.success=R\u00E9ponse correcte\!
+user.create.title=Cr\u00E9er un nouvel utilisateur
 evaluation.not-found=Evaluation not found
 error=An error has occured. Please retry.
 evaluation.result=Mark
@@ -68,3 +65,11 @@ student.not-found=Student not found
 student.average=Student average
 evaluation.already.taken=You have already taken this evaluation
 evaluation.delete.error.already-taken=Cannot delete evaluation has students have already taken this evaluation
+qcm.rate=Rate
+qcm.content=Content
+answer.add=Add an answer
+course.delete.error.evaluation=Cannot delete course {0} as an evaluation has been associated with it
+evaluations.by-grade=Evaluations by grade
+student.info=Profile
+student.marks=My marks
+users.list=Users list
