Add menuByRole + studentsByGrade + accessDeniedHandler

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -73,3 +73,6 @@ evaluations.by-grade=Evaluations by grade
 student.info=Profile
 student.marks=My marks
 users.list=Users list
+students.list=Students list
+access-denied=Access denied
+home=Home
