Fix add answers + take evaluation

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -51,7 +51,7 @@ question.create.validate=Valider
 question.label=Intitul\u00E9
 question.points=Points
 question.edit=\u00E9diter
-answer.create=Ajouter une r\u00E9pons
+answer.create=Ajouter une r\u00E9ponse
 evaluation.delete=Delete
 evaluation.create.success=Evaluation created successfully
 evaluation.delete.success=Evaluation deleted successfully
@@ -76,3 +76,4 @@ users.list=Users list
 students.list=Students list
 access-denied=Access denied
 home=Home
+mark=Note
