--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -74,3 +74,7 @@ students.list=Students list
 access-denied=Access denied
 home=Home
 mark=Note
+grades.list=Grades list
+login=Login
+email=Email
+password=Password
