--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -77,3 +77,7 @@ students.list=Students list
 access-denied=Access denied
 home=Home
 mark=Note
+grades.list=Grades list
+login=Login
+email=Email
+password=Password
