View evaluation results

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -74,6 +74,13 @@ students.list=Students list
 access-denied=Access denied
 home=Home
 mark=Note
+student.profile=Hello,
+student.firstname=Firstname \:
+student.lastname=Lastname \:
+student.email=Email \:
+student.details=Account details \:
+evaluation.button.create=Create a new evaluation
+evaluation.finished.average=no averagemark=Note
 grades.list=Grades list
 login=Login
 email=Email
