--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -77,6 +77,13 @@ students.list=Students list
 access-denied=Access denied
 home=Home
 mark=Note
+student.profile=Bonjour,
+student.firstname=Prénom \:
+student.lastname=Nom \:
+student.email=Email \:
+student.details=Détails des données du compte
+evaluation.button.create=Créer un évaluation
+evaluation.finished.average=pas de moyennemark=Note
 grades.list=Grades list
 login=Login
 email=Email
