View student marks

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -80,7 +80,7 @@ student.lastname=Lastname \:
 student.email=Email \:
 student.details=Account details \:
 evaluation.button.create=Create a new evaluation
-evaluation.finished.average=no averagemark=Note
+evaluation.finished.average=no averagemark\=Note
 grades.list=Grades list
 login=Login
 email=Email
