--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -37,7 +37,7 @@ course.name=Course name
 no.course.found=No course found
 course.create.success=Course successfully created \!
 evaluation.startDate=Start date
-evaluation.endDate=Create Property
+evaluation.endDate=End Date
 evaluation.take=Take evaluation
 course=Course
 action=Action
