--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -39,7 +39,7 @@ course.name=Course name
 no.course.found=No course found
 course.create.success=Course successfully created \!
 evaluation.startDate=Start date
-evaluation.endDate=Create Property
+evaluation.endDate=Date de fin
 evaluation.take=Take evaluation
 course=Course
 action=Action
