Un petit coup de polish...
OSS 117 : Vous voyez l'automobile derrière moi ?
Larmina : Oui...
OSS 117 : Ça fait un petit moment que je l'observe..
Larmina : Eh bien ?
OSS 117 : Eh bien, elle est absolument impeccable.. C'est quand même bien mieux une voiture propre, non ? À l'occasion, je vous mettrai un petit coup de polish.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -45,7 +45,7 @@ answer.create.error=Error while adding answer
 answer.create.success=Answer created with success \!
 question.create.label=Label of your question \:
 question.create.points=Points \:
-question.create.validate=Validate
+question.create.validate=Create question
 question.label=Label
 question.points=Points
 question.edit=Edit
@@ -73,7 +73,10 @@ users.list=Users list
 students.list=Students list
 access-denied=Access denied
 home=Home
-mark=Note
+mark=Mark
+qcm.view.validate=Validate
+qcm.view.reset=reset
+qcm.view.validate.error=An error occured validating the QCMmark=Note
 student.profile=Hello,
 student.firstname=Firstname \:
 student.lastname=Lastname \:
@@ -85,3 +88,5 @@ grades.list=Grades list
 login=Login
 email=Email
 password=Password
+question.none=No question yet
+evaluation.list.title=Evaluation list
