--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,90 +1,92 @@
-qcm.create.title=Create a new QCM
-qcm.create.success=QCM successfully created
-qcm.create.error=Error while saving QCM
+qcm.create.title=Cr\u00E9er un nouveau QCM
+qcm.create.success=QCM cr\u00E9\u00E9 avec succ\u00E8s
+qcm.create.error=Une erreur est survenue en sauvegardant le QCM
 
-signup=Signup
+signup=Inscription
 answer.list.title=Liste des r\u00E9ponses
 
-qcm.name=Qcm name
-qcm.questions.number=Number of questions
-no.qcm.found=No qcm found
-qcm.list=Qcm list
-qcm.create=Create QCM
-evaluation.create.title=Create evaluation
-evaluation.name=Evaluation name
-evaluations.number=Number of available evaluations
-no.evaluation.found=No evaluation available
-evaluations.available=Available evaluations
-evaluation.selected.qcm=Selected qcm
-user.add.title=Add user
-user.add.success=User added successfully
-qcm.view.title=Answer the QCM
+qcm.name=Nom du QCM
+qcm.questions.number=Nombre de question
+no.qcm.found=QCM introuvable
+qcm.list=Liste des QCM
+qcm.create=Cr\u00E9er un QCM
+evaluation.create.title=Cr\u00E9er une \u00E9valuation
+evaluation.name=Nom de l'\u00E9valuation
+evaluations.number=Nombre d'\u00E9valuation disponible
+no.evaluation.found=Aucune \u00E9valuation disponible
+evaluations.available=\u00E9valuation disponibles
+evaluation.selected.qcm=Choisissez un QCM
+user.add.title=Ajouter un utilisateur
+user.add.success=L'utilisateur \u00E0 bien \u00E9t\u00E9 ajout\u00E9
+qcm.view.title=R\u00E9pondez au QCM
 qcm.view.question=question
-users.search=Search user by name
+users.search=Chercher un utilisateur avec son nom
 user.type.teacher=Professeur
-user.type.student=Etudiant
+user.type.student=\u00E9tudiant
 question.create.title=Ajouter une nouvelle question
 question.not.found=Question introuvable
 question.create.success=Nouvelle question ajout\u00E9e
+question.none=Il n'y a aucune question pour l'instant
 qcm.view.validate=Valider
 qcm.view.reset=R\u00E9initialiser
 qcm.view.validate.error=Une erreur est survenue lors de la validation du QCM
 evaluation.selected.grade=Grade
 evaluation.selected.course=Course
-users.filter=Filter by name
-qcm.validate.success=Qcm validated \! Your mark \: {0}
-course.create.title=Add course
-courses.list=Courses list
-course.name=Course name
-no.course.found=No course found
-course.create.success=Course successfully created \!
-evaluation.startDate=Start date
-evaluation.endDate=Create Property
-evaluation.take=Take evaluation
-course=Course
+users.filter=Filtrer par nom
+qcm.validate.success=Qcm termin\u00E9 \! Votre note \: {0}
+course.create.title=Ajouter un cours
+courses.list=Liste des cours
+course.name=Nom du cours
+no.course.found=Cours non trouv\u00E9
+course.create.success=Cours cr\u00E9\u00E9 avec succ\u00E8s \!
+evaluation.startDate=Date de d\u00E9but
+evaluation.endDate=Date de fin
+evaluation.take=Faire l'\u00E9valuation
+evaluation.list.title=Liste des \u00E9valuations
+course=Cours
 action=Action
-answer.create.error=Error while adding answer
-answer.create.success=Answer created with success \!
+answer.create.error=Une erreur est survenue lors de l'ajout de la r\u00E9ponse
+answer.create.success=R\u00E9ponse ajout\u00E9e avec succ\u00E8s \!
 question.create.label=Intitul\u00E9 de votre question \:
 question.create.points=Points \:
-question.create.validate=Valider
+question.create.validate=Cr\u059er la question
 question.label=Intitul\u00E9
 question.points=Points
 question.edit=\u00E9diter
 answer.create=Ajouter une r\u00E9ponse
-evaluation.delete=Delete
-evaluation.create.success=Evaluation created successfully
-evaluation.delete.success=Evaluation deleted successfully
-course.delete=Delete course
-course.delete.success=Courses successfully deletedanswer.create.success=R\u00E9ponse correcte\!
+evaluation.delete=Supprimer
+evaluation.create.success=\u00E9valuation cr\u00E9\u00E9e avec succ\u00E8s
+evaluation.delete.success=\u00E9valuation supprim\u00E9e avec succ\u00E8s
+course.delete=Supprimer le cours
+course.delete.success=Cours supprim\u00E9 avec succ\u00E8s
 user.create.title=Cr\u00E9er un nouvel utilisateur
-evaluation.not-found=Evaluation not found
-error=An error has occured. Please retry.
-evaluation.result=Mark
-student.not-found=Student not found
-student.average=Student average
-evaluation.already.taken=You have already taken this evaluation
-evaluation.delete.error.already-taken=Cannot delete evaluation has students have already taken this evaluation
-qcm.rate=Rate
-qcm.content=Content
-answer.add=Add an answer
-course.delete.error.evaluation=Cannot delete course {0} as an evaluation has been associated with it
-evaluations.by-grade=Evaluations by grade
+evaluation.not-found=\u00E9valuation non trouv\u00E9e
+error=Une erreur est survennue. Veuillez r\u00E9essayer.
+evaluation.result=Note
+student.not-found=\u00E9tudiant non trouv\u00E9
+student.average=Moyenne de l'\u00E9tudiant
+evaluation.already.taken=Vous avez d\u00E9j\u00E0 pass\u00E9 cette \u00E9valuation
+evaluation.delete.error.already-taken=Vous ne pouvez pas supprimer une \u00E9valuation que des \u00E9tudiants ont d\u00E9j\u00E0 pass\u00E9
+qcm.rate=Points
+qcm.content=Contenu
+answer.add=Ajouter une r\u00E9ponse
+course.delete.error.evaluation=Vous ne pouvez pas supprimer le cours {0} car une \u00E9valuation y est d\u00E9j\u00E0 associ\u00E9e
+evaluations.by-grade=\u00E9valuation par niveau
 student.info=Profile
-student.marks=My marks
-users.list=Users list
-students.list=Students list
-access-denied=Access denied
-home=Home
+student.marks=Mes notes
+users.list=Liste des utilisateurs
+students.list=Liste des \u00E9tudiants
+access-denied=Acc\u00E8s refus\u00E9
+home=Accueil
 mark=Note
 student.profile=Bonjour,
-student.firstname=Prénom \:
+student.firstname=Pr\u00E9nom \:
 student.lastname=Nom \:
 student.email=Email \:
-student.details=Détails des données du compte
-evaluation.button.create=Créer un évaluation
+student.details=D\u00E9tails des donn\u00E9es du compte
+evaluation.button.create=Cr\u00E9er un \u00E9valuation
 evaluation.finished.average=pas de moyennemark=Note
-grades.list=Grades list
-login=Login
-email=Email
-password=Password
+grades.list=Liste des promotions
+login=Connexion
+email=E-mail
+password=Mot de passe
