--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -90,3 +90,10 @@ email=Email
 password=Password
 question.none=No question yet
 evaluation.list.title=Evaluation list
+
+
+### Validation
+validation.evaluation.startDate.mandatory=The start date is mandatory
+validation.evaluation.endDate.mandatory=The end date is mandatory
+validation.evaluation.startDate.after.today=The start date must be in the future
+validation.evaluation.endDate.afterStartDate=The end date must be after the start date
