Un petit coup de polish... bis
OSS 117 : Vous voyez l'automobile derrière moi ?
Larmina : Oui...
OSS 117 : Ça fait un petit moment que je l'observe..
Larmina : Eh bien ?
OSS 117 : Eh bien, elle est absolument impeccable.. C'est quand même bien mieux une voiture propre, non ? À l'occasion, je vous mettrai un petit coup de polish.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -15,7 +15,8 @@ qcm.create=Create QCM
 evaluation.create.title=Create evaluation
 evaluation.name=Evaluation name
 evaluations.number=Number of available evaluations
-no.evaluation.found=No evaluation available
+no.evaluation.found=No evaluation found
+no.student.found=No student found
 evaluations.available=Available evaluations
 evaluation.selected.qcm=Selected qcm
 user.add.title=Add user
@@ -66,7 +67,7 @@ qcm.rate=Rate
 qcm.content=Content
 answer.add=Add an answer
 course.delete.error.evaluation=Cannot delete course {0} as an evaluation has been associated with it
-evaluations.by-grade=Evaluations by grade
+evaluations.by-grade=Filter by grade
 student.info=Profile
 student.marks=My marks
 users.list=Users list
@@ -90,3 +91,4 @@ email=Email
 password=Password
 question.none=No question yet
 evaluation.list.title=Evaluation list
+no.result.found=You don't have marks yet.
