--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -13,7 +13,7 @@ qcm.create=Cr\u00E9er un QCM
 evaluation.create.title=Cr\u00E9er une \u00E9valuation
 evaluation.name=Nom de l'\u00E9valuation
 evaluations.number=Nombre d'\u00E9valuation disponible
-no.evaluation.found=Aucune \u00E9valuation disponible
+no.evaluation.found=Aucune \u00E9valuation trouv\u00E9e
 evaluations.available=\u00E9valuation disponibles
 evaluation.selected.qcm=Choisissez un QCM
 user.add.title=Ajouter un utilisateur
@@ -71,7 +71,7 @@ qcm.rate=Points
 qcm.content=Contenu
 answer.add=Ajouter une r\u00E9ponse
 course.delete.error.evaluation=Vous ne pouvez pas supprimer le cours {0} car une \u00E9valuation y est d\u00E9j\u00E0 associ\u00E9e
-evaluations.by-grade=\u00E9valuation par niveau
+evaluations.by-grade=Filtrer par niveau
 student.info=Profile
 student.marks=Mes notes
 users.list=Liste des utilisateurs
@@ -90,3 +90,5 @@ grades.list=Liste des promotions
 login=Connexion
 email=E-mail
 password=Mot de passe
+no.student.found=Aucune \u00E9tudiant trouv\u00E9
+no.result.found=Vous n'avez pas encore de note.
