fix quelques bug mineurs

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -91,7 +91,7 @@ login=Connexion
 email=E-mail
 password=Mot de passe
 no.student.found=Aucune \u00E9tudiant trouv\u00E9
-no.result.found=Vous n'avez pas encore de note.password=Mot de passe
+no.result.found=Vous n'avez pas encore de note.
 
 
 ### Validation
