--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -97,4 +97,5 @@ evaluation.list.title=Evaluation list
 validation.evaluation.startDate.mandatory=The start date is mandatory
 validation.evaluation.endDate.mandatory=The end date is mandatory
 validation.evaluation.startDate.after.today=The start date must be in the future
-validation.evaluation.endDate.afterStartDate=The end date must be after the start dateno.result.found=You don't have marks yet.
+validation.evaluation.endDate.afterStartDate=The end date must be after the start dateno.result.found\=You don't have marks yet.
+no.result.found=You don't have marks yet.
