--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -99,3 +99,5 @@ validation.evaluation.startDate.mandatory=La date de d\u00E9but est obligatoire
 validation.evaluation.endDate.mandatory=La date de fin est obligatoire
 validation.evaluation.startDate.after.today=La date de d\u00E9but doit etre dans le futur
 validation.evaluation.endDate.afterStartDate=La date de fin doit etre apres la date de d\u00E9but
+application.home=Home
+evaluations.proposed=Proposed evaluations
