Un magnifique bouton déconnexion très bien centré verticalement

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -91,7 +91,7 @@ email=Email
 password=Password
 question.none=No question yet
 evaluation.list.title=Evaluation list
-
+deconnexion=Log Out
 
 ### Validation
 validation.evaluation.startDate.mandatory=The start date is mandatory
