--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -101,3 +101,4 @@ validation.evaluation.startDate.after.today=La date de d\u00E9but doit etre dans
 validation.evaluation.endDate.afterStartDate=La date de fin doit etre apres la date de d\u00E9but
 application.home=Home
 evaluations.proposed=Proposed evaluations
+deconnexion=D\u00E9connexion
