Fix take evaluation spring:form bug for radio elements

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -31,7 +31,7 @@ question.create.success=New question addeduser.add.success=User added successful
 evaluation.selected.grade=Grade
 evaluation.selected.course=Course
 users.filter=Filter by name
-qcm.validate.success=Qcm validated \! Your mark \: {0}
+qcm.validate.success=Qcm validated \! Your mark \: {0} / 20
 course.create.title=Add course
 courses.list=Courses list
 course.name=Course name
