--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -33,7 +33,7 @@ qcm.view.validate.error=Une erreur est survenue lors de la validation du QCM
 evaluation.selected.grade=Grade
 evaluation.selected.course=Course
 users.filter=Filtrer par nom
-qcm.validate.success=Qcm termin\u00E9 \! Votre note \: {0}
+qcm.validate.success=Qcm termin\u00E9 \! Votre note \: {0} / 20
 course.create.title=Ajouter un cours
 courses.list=Liste des cours
 course.name=Nom du cours
