Fix takeEvaluation bug when no qcm is found + marks.jsp basic design + qcm link on proposed evaluations

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -102,3 +102,4 @@ no.result.found=You don't have marks yet.
 validation.evaluation.endDate.afterStartDate=The end date must be after the start date
 application.home=Home
 evaluations.proposed=Proposed evaluations
+evaluations=Evaluations
