--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -102,3 +102,4 @@ validation.evaluation.endDate.afterStartDate=La date de fin doit etre apres la d
 application.home=Home
 evaluations.proposed=Proposed evaluations
 deconnexion=D\u00E9connexion
+evaluations=Evaluations
