--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -85,12 +85,12 @@ student.lastname=Nom \:
 student.email=Email \:
 student.details=D\u00E9tails des donn\u00E9es du compte
 evaluation.button.create=Cr\u00E9er une \u00E9valuation
-evaluation.finished.average=pas de moyennemark=Note
+evaluation.finished.average=pas de moyenne
 grades.list=Liste des promotions
 login=Connexion
 email=E-mail
 password=Mot de passe
-no.student.found=Aucune \u00E9tudiant trouv\u00E9
+no.student.found=Aucun \u00E9tudiant trouv\u00E9
 no.result.found=Vous n'avez pas encore de note.
 
 
@@ -103,3 +103,4 @@ application.home=Home
 evaluations.proposed=Proposed evaluations
 deconnexion=D\u00E9connexion
 evaluations=Evaluations
+evaluation.create.error=Error lors de la cr\u00E9ation de l'\u00E9valuation
