Add loggers + edit question

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -26,6 +26,7 @@ user.type.student=\u00E9tudiant
 question.create.title=Ajouter une nouvelle question
 question.not.found=Question introuvable
 question.create.success=Nouvelle question ajout\u00E9e
+question.edit.success=Question \u00E9dit\u00E9e
 question.none=Il n'y a aucune question pour l'instant
 qcm.view.validate=Valider
 qcm.view.reset=R\u00E9initialiser
