--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -28,6 +28,7 @@ user.create.title=Create a new user
 question.create.title=Add new question
 question.not.found=Question not found
 question.create.success=New question addeduser.add.success=User added successfully
+question.edit.success=Question edited successfully
 evaluation.selected.grade=Grade
 evaluation.selected.course=Course
 users.filter=Filter by name
