Add editQuestion functionality

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -50,7 +50,7 @@ question.create.points=Points \:
 question.create.validate=Create question
 question.label=Label
 question.points=Points
-question.edit=Edit
+question.edit=Edit question
 answer.create=Add an answer
 evaluation.delete=Delete
 evaluation.create.success=Evaluation created successfully
@@ -65,6 +65,7 @@ student.average=Student average
 evaluation.already.taken=You have already taken this evaluation
 evaluation.delete.error.already-taken=Cannot delete evaluation has students have already taken this evaluation
 qcm.rate=Rate
+qcm.edit=Edit qcm
 qcm.content=Content
 answer.add=Add an answer
 course.delete.error.evaluation=Cannot delete course {0} as an evaluation has been associated with it
@@ -105,3 +106,4 @@ application.home=Home
 evaluations.proposed=Proposed evaluations
 evaluations=Evaluations
 evaluation.create.error=Error while creating evaluation
+question.answers=Answers
