--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -53,7 +53,7 @@ question.create.points=Points \:
 question.create.validate=Cr\u059er la question
 question.label=Intitul\u00E9
 question.points=Points
-question.edit=\u00E9diter
+question.edit=\u00E9diter la question
 answer.create=Ajouter une r\u00E9ponse
 evaluation.delete=Supprimer
 evaluation.create.success=\u00E9valuation cr\u00E9\u00E9e avec succ\u00E8s
@@ -66,6 +66,7 @@ error=Une erreur est survennue. Veuillez r\u00E9essayer.
 evaluation.result=Note
 student.not-found=\u00E9tudiant non trouv\u00E9
 student.average=Moyenne de l'\u00E9tudiant
+qcm.edit=Editer le qcm
 evaluation.already.taken=Vous avez d\u00E9j\u00E0 pass\u00E9 cette \u00E9valuation
 evaluation.delete.error.already-taken=Vous ne pouvez pas supprimer une \u00E9valuation que des \u00E9tudiants ont d\u00E9j\u00E0 pass\u00E9
 qcm.rate=Points
@@ -105,3 +106,4 @@ evaluations.proposed=Proposed evaluations
 deconnexion=D\u00E9connexion
 evaluations=Evaluations
 evaluation.create.error=Error lors de la cr\u00E9ation de l'\u00E9valuation
+question.answers=Answers
